--- a/api-allv2/templates/index.html
+++ b/api-allv2/templates/index.html
@@ -17,11 +17,12 @@
         <h2 class="logo" ><a href="index.html">Termitup Logo</a></h2>                    <!--<h2 class="menu__title"><a href="javascript:void(0);" onclick="myFunction()">☰</a></h2>!-->
             <h3 class="subtitle">A wonderful service for terminology</h3>
 
-            <div class="menu">
+            <div id="navbar" class="menu">
             <ul class="menu__list">
-                <li><a href="#intro__content" class="header-menu__item">Home</a></li>
-                <li><a href="#" class="header-menu__item">Demo</a></li>
-                <li><a href="#" class="header-menu__item">About</a></li>
+                <li><a href="javascript:void(0)" class="header-menu__item active">Home</a></li>
+                <li><a href="javascript:void(0)" class="header-menu__item">Demo</a></li>
+                <li><a href="javascript:void(0)" class="header-menu__item">API</a></li>
+                <li><a href="javascript:void(0)" class="header-menu__item">About</a></li>
                 <!--<li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>!-->
                 <!--<li><a href="#blog-section" class="nav-link">Blog</a></li>!-->
                 <li><a href="#contact-section" class="header-menu__item">Contact</a></li>
@@ -57,6 +58,24 @@
         <article class="service-item"> 
         <h3 class="service-item__title">title 3</h3>
         <div class="service-item__img">img</div>
+        <div class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>      
+        <div class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>      
+        <div class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>      
         </article>   
 
    </div> 
@@ -82,7 +101,20 @@
         </div>
         
 </footer>
-<script src="<?php bloginfo('stylesheet_directory') ?>/js.js"></script>
+<script>
+window.onscroll = function() {myFunction()};
+
+var navbar = document.getElementById("navbar");
+var sticky = navbar.offsetTop;
+
+function myFunction() {
+  if (window.pageYOffset >= sticky) {
+    navbar.classList.add("sticky")
+  } else {
+    navbar.classList.remove("sticky");
+  }
+}
+</script>
 </body>
 </html>
 
