--- a/api-allv2/templates/index.html
+++ b/api-allv2/templates/index.html
@@ -38,12 +38,7 @@
 	
     <section class="intro__content clearfix">
     <div class="intro__post">
-		<div class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>		
+		<div class="intro__text"><p>This service generates Enriched Linked Terminologies from corpus: given a term in a corpus, it retrieves disambiguated multilingual data from the Linguistic Linked Open Data cloud (translations, definitions, synonyms and other terminological data). The result is published as a set of JSON-LD files modeled as per the SKOS vocabulary.</p></div>		
         
     </div>
 	</section>
@@ -52,42 +47,25 @@
     <section class="intro-services clearfix">
 
         <h3 class="intro__title">Try it out!</a></h3>
+        <div class="intro__text"><p>This service is being developed within Prêt-a-Llod H2020 project.</p></div>
+        <h4 class="logo2" >Pal Logo</h4> 
 
     
     <div class="intro-services__wrapper ">
         <article class="service-item"> 
-        <h3 class="service-item__title">title 3</h3>
-        <div class="service-item__img">img</div>
-        <div class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>      
-        <div class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>      
-        <div class="intro__text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>      
-        </article>   
+        
 
    </div> 
     
     </section>
 
-<!--CONTACTO!-->
+<!--CONTACTO!
 
     <section class="intro-contact">
-        <h3 class="intro-contact__title"><a href="" target="_blank">Contact</a></h3>
+        <h3 class="intro-contact__title"><a href="" target="_blank">Acknowledgements</a></h3>
 
-    </section>
+
+    </section>-->
 
 </main>
 <!-- Menú footer!-->
@@ -95,7 +73,6 @@
         
         <div class="footer-wrapper"> <!-- este div yo creo que no lo necesito !-->
             <nav class="footer-menu clearfix">
-            <h3 class="footer-menu__item">Diseñado por Pesto</h3>
             </nav>
             <!--<a href="#" class="icon-search">Buscador</a> !-->
         </div>
