--- a/api-allv2/templates/css/style.css
+++ b/api-allv2/templates/css/style.css
@@ -36,7 +36,7 @@ body {
 .logo {
     width: 15.25rem;
     height: 7rem;
-    background: url('images/termite.png') no-repeat center;
+    background: url('../images/termite.png') no-repeat center;
     background-size: contain;
     text-indent: -9000px;
     text-align: center;
@@ -58,7 +58,7 @@ height: inherit;
 .logo2 {
     width: 15.25rem;
     height: 7rem;
-    background: url('images/logopal.png') no-repeat center;
+    background: url('../images/logopal.png') no-repeat center;
     background-size: contain;
     text-indent: -9000px;
     text-align: center;
@@ -1016,7 +1016,7 @@ transform:scale(1.2);
 
 .service__item:last-of-type::after {
     content: "";
-    background-image: url('images/movie.jpg');
+    background-image: url('../images/movie.jpg');
     opacity: 1;
     top: 0;
     left: 0;
