--- a/api-allv2/templates/index.html
+++ b/api-allv2/templates/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=devide-width, initial-scale=1.0">  <!-- para dispositivos móviles !-->
     <title>TermitUp</title>
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-        <link rel="stylesheet" href="css/reset.css">
-        <link rel="stylesheet" href="css/style.css">
-        <link rel="stylesheet" href="css/fontello.css">
+     
+        <link href="css/reset.css" rel="stylesheet" type="text/css">
+        <link href="css/style.css" rel="stylesheet" type="text/css">
+        <link href="css/fontello.css" rel="stylesheet" type="text/css">
+
 </head>
 <body>
 <header class="page-header">
