--- a/api-allv2/templates/index.html
+++ b/api-allv2/templates/index.html
@@ -61,7 +61,7 @@
         <h3 class="contact__title">Contact</h3>
         <div class="contact__text">
         <p>This work has been developed by <a href="http://www.oeg-upm.net/" class="oegweb" target="_blank">Ontology Engineering Group</a> (Universidad Politécnica de Madrid) as part of the PhD. thesis of Patricia Martín-Chozas. For more information, send an email to pmchozas@fi.upm.es</p>
-        <p>This service is being developed within Prêt-a-Llod H2020 project (grant agreement No. 825182)</p>
+        <p>This work has been supported by Prêt-à-Llod, which has received funding from the European Union’s Horizon 2020 research and innovation programme under grant agreement No. 825182</p>
         <img src="../static/images/logopal.png" class="logo2">
         </div>
     </section>
