--- a/kos/css/bootstrap-4.4.1.css
+++ b/kos/css/bootstrap-4.4.1.css
@@ -583,25 +583,25 @@ pre code {
 
 @media (min-width: 576px) {
   .container, .container-sm {
-    max-width: 540px;
+    max-width: 90%;
   }
 }
 
 @media (min-width: 768px) {
   .container, .container-sm, .container-md {
-    max-width: 720px;
+    max-width: 90%;
   }
 }
 
 @media (min-width: 992px) {
   .container, .container-sm, .container-md, .container-lg {
-    max-width: 960px;
+    max-width: 90%;
   }
 }
 
 @media (min-width: 1200px) {
   .container, .container-sm, .container-md, .container-lg, .container-xl {
-    max-width: 1140px;
+    max-width: 90%;
   }
 }
 
@@ -2176,7 +2176,9 @@ textarea.form-control {
 }
 
 .form-group {
-  margin-bottom: 1rem;
+    
+    border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
 }
 
 .form-text {
@@ -3573,6 +3575,8 @@ input[type="button"].btn-block {
   -ms-flex-align: stretch;
   align-items: stretch;
   width: 100%;
+	border-top-left-radius: 0.25rem;
+    border-top-right-radius: 0.25rem;
 }
 
 .input-group > .form-control,
@@ -4782,10 +4786,9 @@ input[type="button"].btn-block {
 }
 
 .card-header {
-  padding: 0.75rem 1.25rem;
-  margin-bottom: 0;
-  background-color: rgba(0, 0, 0, 0.03);
-  border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+    padding: 0.75rem 1.25rem;
+    margin-bottom: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
 }
 
 .card-header:first-child {
@@ -4796,6 +4799,20 @@ input[type="button"].btn-block {
   border-top: 0;
 }
 
+.card-header1 {
+    padding: 0.25rem 1.25rem;
+    margin-bottom: 0;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.125);
+	
+}
+
+.card-header1:first-child {
+  border-radius: calc(0.25rem - 1px) calc(0.25rem - 1px) 0 0;
+}
+
+.card-header1 + .list-group .list-group-item:first-child {
+  border-top: 0;
+}
 .card-footer {
   padding: 0.75rem 1.25rem;
   background-color: rgba(0, 0, 0, 0.03);
