--- a/api-allv2/templates/index.html
+++ b/api-allv2/templates/index.html
@@ -54,7 +54,7 @@
     <section id="api" class="api">
         <h3 class="about__title">API</h3>
         <div class="about__text">
-        <p>Test this service through <a href="http://termitup.oeg-upm.net/swagger/" class="apilink" target="_blank">TermitUp Swagger API</a>.</p>
+        <p>Test this service through <a href="https://termitup.oeg.fi.upm.es/swagger" class="apilink" target="_blank">TermitUp Swagger API</a>.</p>
         </div>
     </section>
     <section id="thanks" class="thanks">
